# moodify

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  config.py  docker-compose.yml  main.py  migrate.py  pyproject.toml  streamlit_config.toml
scraper/: behance_scraper.py  pinterest_scraper.py  unsplash_scraper.py
tests/: conftest.py  test_app.py  test_behance_scraper.py  test_board_maker.py  test_clusterer.py  test_color_extractor.py  test_database.py  test_downloader.py  test_embedder.py  test_helpers.py  test_main.py  test_pinterest_scraper.py  test_storage.py
utils/: board_maker.py  clusterer.py  color_extractor.py  database.py  downloader.py  embedder.py  helpers.py  storage.py
