[project]
name = "moodify"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fake-useragent>=2.2.0",
    "hdbscan>=0.8.41",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "reportlab>=4.4.10",
    "requests>=2.32.5",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "umap-learn>=0.5.11",
]

[dependency-groups]
dev = [
    "click>=8.3.1",
    "pytest>=9.0.2",
]
